fixed about me being un aligned

--- a/src/containers/aboutMe/aboutMe.css
+++ b/src/containers/aboutMe/aboutMe.css
@@ -1,6 +1,6 @@
 .aboutMe-container {
     background: linear-gradient(rgba(15, 22, 36, 0) 0%, rgba(15, 22, 36, 1) 5%);
-    padding: 4rem 0 2 2rem 0;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
